# enkerli-juce

./: .gitignore  LICENSE  README.md  TESTING.md
.github/workflows/: build-plugin.yml
cmake/: EnkerliPlugin.cmake
examples/BridgePilot/: CMakeLists.txt
examples/BridgePilot/Source/: Plugin.cpp  PluginEditor.h  PluginProcessor.h
examples/BridgePilot/WebUI/: index.html
src/: EnkerliWebView.h  FileExport.h  FileExport.mm  FileImport.h  FileImport.mm  MidiClipScheduler.h  MidiInputCollector.h  RuntimeInfo.h  TransportSnapshot.h
tools/: suite-build  validate.sh  webview-smoke.swift
web/: enkerli-bridge.js
